gdk/toplevel: Add gdk_toplevel_titlebar_gesture()

Where supported, this allows delegating the titlebar action to the
compositor instead of trying to replicate its behavior client-side.

https://gitlab.gnome.org/GNOME/mutter/-/issues/602